tests/elab/err/arity_mismatch.pion
let f = fn(x: Bool) => x;

let x = f();

let y = f(true, false);